[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaino"
version = "0.1.1"
description = "python lib for Arduino Chaino device"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Jang-Hyun Park", email = "salesiopark@gmail.com" }]
keywords = ["arduino", "serial", "i2c"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "pyserial>=3.5,<4.0"   # 권장: 하위 호환을 위해 상한도 지정
]

[project.urls]
Homepage = "https://github.com/salesiopark/chaino"
Issues = "https://github.com/salesiopark/chaino/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]